src/pages/HomePage.css
/* src/pages/HomePage.css */

.home-container {
    width: 100%;
    padding: 24px;
    background-color: #f5f5f5bf;
    border-radius: 8px;
    max-width: 100%;
    margin: auto;
    display: table;
    margin-top: 3rem;
    position: relative;
}
.ant-form-item .ant-form-item-label
{
    overflow: visible;
}
.form-wrapper {
    display: table-row;
    width: 100%;
}

.header-row, .one-row-form {
    display: table-row;
    background-color: #f0f0f0;
}

.header-row span, .one-row-form .ant-form-item {
    display: table-cell;
    text-align: center;
    padding: 10px;
    border: 1px solid #ccc;
    color: #333;
}

.cta-button {
    background-color: #007bff;
    border: none;
    font-weight: bold;
    padding: 8px 16px;
    font-size: 1rem;
    border-radius: 6px;
    color: #fff;
    transition: background-color 0.3s ease, transform 0.2s ease;
}

.cta-button:hover {
    background-color: #3a9b66;
    transform: scale(1.05);
}

.filter-section {
    display: inline-flex;
    gap: 10px;
    margin-bottom: 20px;
    margin-top: 20px;
    /* margin-left: 35%; */
}

